[tool.poetry]
name = "nibiru-proto"
version = "0.0.0"
description = ""
authors = [
    "Nibiru Chain <dev@nibiru.fi>"
]
packages =[
  { include = "nibiru_proto" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.48.0"
bech32 = "^1.2.0"
asyncio = "^3.4.3"
protobuf = "3.20.1"
mypy-protobuf = "^3.2.0"
grpcio-tools = "^1.48.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
grpcio-tools = "^1.48.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
include = '.*\.pyi?$'
target-version = ['py39']
extend-exclude = '''
^/(
    \.vscode
  | nibiru_proto
)$
'''
